# packages/orbit-api/src/routes/lists/routes.ts
@@ -12,6 +12,7 @@ export const selectListSchema = z.object({
 	description: z.string().nullable(),
 	color: z.string().nullable(),
 	icon: z.string(),
+	includeInResurface: z.boolean(),
 	createdAt: z.string().datetime({ offset: true }),
 	updatedAt: z.string().datetime({ offset: true }),
 });
@@ -39,6 +40,7 @@ export const insertListSchema = z.object({
 	description: z.string().nullable().optional(),
 	color: z.string().nullable().optional(),
 	icon: z.string().optional(),
+	includeInResurface: z.boolean().optional(),
 });
 
 export const patchListSchema = insertListSchema.partial();
